got drinks to display as li elements

--- a/views/drinks_index.ejs
+++ b/views/drinks_index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GitPub App</title>
     <style type="text/css">
         body {
           color: blanchedalmond;
@@ -13,6 +13,14 @@
       </style>
 </head>
 <body>
+
+    <ul>
+        <% for(let i = 0; i < allDrinks.length; i++) { %>
+            <li>
+                <a href="/drinks/<%= i %>"><%= allDrinks[i].name %></a>
+            </li>
+        <% } %>
+    </ul>
     
 </body>
 </html>
