--- a/views/drinks_index.ejs
+++ b/views/drinks_index.ejs
@@ -14,6 +14,8 @@
 </head>
 <body>
 
+    <h1>Welcome to GitPub!</h1>
+
     <ul>
         <% for(let i = 0; i < allDrinks.length; i++) { %>
             <li>
