--- a/views/drinks_index.ejs
+++ b/views/drinks_index.ejs
@@ -9,6 +9,7 @@
         body {
           color: blanchedalmond;
           background-color: steelblue;
+          text-transform: capitalize;
         }
       </style>
 </head>
