i think the code i copied was wrong

--- a/views/drinks_show.ejs
+++ b/views/drinks_show.ejs
@@ -18,7 +18,7 @@
 
     <h2><%= drink.name %></h2>
 
-    <img src="<% drink.image %>" alt="drink image">
+    <img src="<%= drink.image %>" alt="drink image">
 
     <h3><%= drink.price %></h3>
 
