--- a/food_show.ejs
+++ b/food_show.ejs
@@ -9,21 +9,23 @@
         body {
           color: blanchedalmond;
           background-color: steelblue;
-          text-transform: capitalize;
         }
       </style>
 </head>
 <body>
 
-    <h1>Welcome to GitPub!</h1>
+    <h1>At food bar</h1>
 
-    <ul>
-        <% for(let i = 0; i < allDrinks.length; i++) { %>
-            <li>
-                <a href="/drinks/<%= i %>"><%= allDrinks[i].name %></a>
-            </li>
-        <% } %>
-    </ul>
+    <h2><%= food.name %></h2>
 
+    <img src="<%= food.image %>" alt="food image">
+
+    <h3><%= food.price %></h3>
+
+    <br>
+    <br>
+
+    <a href="/food">Back to Index</a>
+    
 </body>
 </html>
