--- a/views/food_index.ejs
+++ b/views/food_index.ejs
@@ -15,15 +15,15 @@
 </head>
 <body>
 
-    <h1>Welcome to GitPub!</h1>
+    <h1>Welcome to GitPub Food!</h1>
 
     <ul>
-        <% for(let i = 0; i < allDrinks.length; i++) { %>
+        <% for(let i = 0; i < allFood.length; i++) { %>
             <li>
-                <a href="/drinks/<%= i %>"><%= allDrinks[i].name %></a>
+                <a href="/food/<%= i %>"><%= allFood[i].name %></a>
             </li>
         <% } %>
     </ul>
-
+    
 </body>
 </html>
